<resources>
    <string name="app_name">SaraAdmin</string>
    <string name="usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Login">Inicar Sesión</string>
    <string name="logoDescripcion">Logo de la aplicación</string>
    <string name="sara_monitor">S.A.R.A. : Monitor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hora">Aquí va la fecha y hora</string>
    <string name="estado">Aquí va el estado</string>
    <string name="cedula">Cédula del estudiante</string>
    <string name="nombre_estudiantee">Nombre del estudiante</string>
    <string name="semestre_estudiante">Semestre del estudiante</string>
    <string name="monitoria">Línea de monitoria</string>
    <string name="fecha_asesoria">Fecha y hora de asesoría</string>
    <string name="estado_cita">Estado de la cita</string>
    <string name="cancelar_cita">Cancelar Cita</string>
    <string name="terminar_cita">Terminar Cita</string>
    <string name="inasistencia">No asistió el estudiante</string>
    <string name="sara_admin">S.A.R.A. Admin</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="eliminar_monitor">Eliminar monitor</string>
    <string name="agregar_monitor">Agregar monitor</string>
    <string name="ordenar_por_linea_monitoria">Línea de monitoría</string>
    <string name="capturar_fotografia">Capturar</string>
    <string name="nombre_monitor">Nombre del monitor</string>
    <string name="cedula_monitor">Cédula</string>
    <string name="nombre_usuario_monitor">Nombre de usuario</string>
    <string name="telefono_monitor">Teléfono</string>
    <string name="hora_atencion">Hora de atención</string>
    <string name="crear_Monitor">Crear Monitor</string>
    <string name="semestre_monitor">Semestre</string>
    <string name="lugar_atencion">Lugar de atención</string>
    <string name="descripcion_camera">Imagen para capturar la foto del monitor</string>
    <string name="mensaje_agregar_error">Debe de llenar todos los campos, son obligatorios</string>
    <string name="detalle_monitor">Detalle del monitor</string>
    <string name="agregar_cita">Agregar Cita</string>
    <string name="compartir_en_redes">Compartir perfil en:</string>
    <string name="cedula_estudiante">Cédula del estudiante</string>
    <string name="nombre_estudiante">Nombre del estudiante</string>
    <string name="linea_monitoria">Línea del monitoria</string>
    <string name="crear_cita">Agregar cita</string>


    <string-array name="estados">
        <item>Concretada</item>
        <item>NO se presentó el estudiante</item>
        <item>Cancelada</item>
    </string-array>
</resources>

