<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.edu.uniquindio.android.electiva.proyectosara.fragments.AgregarMonitorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/editTextCedulaEstudiante"
                    android:layout_width="360dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/cedula_estudiante" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/editTextNombreEstudiante"
                    android:layout_width="360dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_estudiante" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/editTextSemestreEstudiante"
                    android:layout_width="360dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="@string/semestre_estudiante" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/editTextLineaMonitoria"
                    android:layout_width="360dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:hint="@string/linea_monitoria"
                    android:layout_marginBottom="3pt"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnHoraAtencion"
                android:layout_gravity="center_horizontal"
                android:text="@string/hora_atencion"
                android:layout_marginBottom="5pt" />


            <Button
                android:layout_width="360dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/btnAgregarCita"
                android:text="@string/crear_cita"
                android:textColor="@color/cardview_light_background"
                android:background="@color/colorU" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>
